--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.5",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "sass": "^1.50.0",
     "typescript": "^4.6.3"
   }
 }
